--- a/Open-ILS/xul/staff_client/server/skin/patron_display.css
+++ b/Open-ILS/xul/staff_client/server/skin/patron_display.css
@@ -13,28 +13,30 @@ deck#patron_deck { border-left: solid thin black; }
 .MULTIPLE_PENALTIES .patronNameLarge { background-color: red; }
 */
 
-.TEST label.bill { color: red; }
-.TEST label.bill.label { text-decoration: underline; }
+.PATRON_HAS_BILLS .patronNameLarge { background-color: #FF9900; }
+.PATRON_HAS_BILLS label.bill { color: #FF9900; }
+.PATRON_HAS_BILLS label.bill.label { text-decoration: underline; }
+.PATRON_HAS_BILLS label.bill.value { }
 
-.TEST label.credit { color: red; }
-.TEST label.credit.label { text-decoration: underline; }
-.TEST label.credit.value { }
+.PATRON_HAS_OVERDUES .patronNameLarge { background-color: #FF9900; }
+.PATRON_HAS_OVERDUES label.items_overdue { color: #FF9900; }
+.PATRON_HAS_OVERDUES label.items_overdue.label { text-decoration: underline; }
+.PATRON_HAS_OVERDUES label.items_overdue.value { }
 
-.PATRON_EXCEEDS_CHECKOUT_COUNT label.items_out { color: red; }
+.PATRON_EXCEEDS_CHECKOUT_COUNT .patronNameLarge { background-color: purple; }
+.PATRON_EXCEEDS_CHECKOUT_COUNT label.items_out { color: purple; }
 .PATRON_EXCEEDS_CHECKOUT_COUNT label.items_out.label { text-decoration: underline; }
 .PATRON_EXCEEDS_CHECKOUT_COUNT label.items_out.value { }
 
-.TEST label.items_overdue { color: red; }
-.TEST label.items_overdue.label { text-decoration: underline; }
-.TEST label.items_overdue.value { }
+.PATRON_EXCEEDS_OVERDUE_COUNT .patronNameLarge { background-color: purple; }
+.PATRON_EXCEEDS_OVERDUE_COUNT label.items_overdue { color: purple; }
+.PATRON_EXCEEDS_OVERDUE_COUNT label.items_overdue.label { text-decoration: underline; }
+.PATRON_EXCEEDS_OVERDUE_COUNT label.items_overdue.value { }
 
-.TEST label.holds { color: blue; }
-.TEST label.holds.label { text-decoration: underline; }
-.TEST label.holds.value { }
-
-.TEST label.holds_ready { color: blue; }
-.TEST label.holds_ready.label { text-decoration: underline; }
-.TEST label.holds_ready.value { }
+.PATRON_EXCEEDS_FINES .patronNameLarge { background-color: purple; }
+.PATRON_EXCEEDS_FINES label.bill { color: purple; }
+.PATRON_EXCEEDS_FINES label.bill.label { text-decoration: underline; }
+.PATRON_EXCEEDS_FINES label.bill.value { }
 
 .PATRON_AGE_LT_18 .dob { text-decoration: underline; color: purple; }
 .PATRON_AGE_LT_18 label.juvenile_indicator { display: inline; text-decoration: underline; color: purple; }
@@ -43,10 +45,10 @@ deck#patron_deck { border-left: solid thin black; }
 .PATRON_HAS_ALERT groupbox.alert { background-color: yellow; }
 .PATRON_HAS_ALERT label.alert_indicator { display: inline; text-decoration: underline; color: olive }
 
-.PATRON_INACTIVE .patronNameLarge { background-color: gray; }
+.PATRON_INACTIVE .patronNameLarge { background-color: #333333; }
 .PATRON_INACTIVE label.inactive_indicator { display: inline; text-decoration: underline; color: gray; }
 
-.PATRON_EXPIRED .patronNameLarge { background-color: fuchsia; }
+.PATRON_EXPIRED .patronNameLarge { background-color: #666666; }
 .PATRON_EXPIRED label.expired_indicator { display: inline; text-decoration: underline; color: fuchsia; }
 
 .PATRON_BARRED .patronNameLarge { background-color: red; }
