added holdable column to copy details display when isXUL

--- a/Open-ILS/web/opac/skin/default/css/layout.css
+++ b/Open-ILS/web/opac/skin/default/css/layout.css
@@ -226,3 +226,5 @@ table { border-collapse: collapse; }
 
 /* ie does not support disabling <option> elements */
 .disabled_option { color: #808080; }
+
+.copy_more_info { padding-left: 6px; color: #804070; }
