--- a/Open-ILS/xul/staff_client/server/skin/global.css
+++ b/Open-ILS/xul/staff_client/server/skin/global.css
@@ -7,6 +7,7 @@ description { -moz-user-select: text; }
 *|input:focus { background-color: #DDFFDD; }
 
 .outline_me { -moz-outline: solid; }
+.clipboard_outline_me { -moz-outline: dotted thin gray; }
 
 tabpanel { border: 2px groove black; }
 caption { font-weight: bold; }
