--- a/Open-ILS/xul/staff_client/server/skin/patron_display.css
+++ b/Open-ILS/xul/staff_client/server/skin/patron_display.css
@@ -44,6 +44,8 @@ deck#patron_deck { border-left: solid thin black; }
 .PATRON_HAS_INVALID_DOB .dob { color: purple; }
 .PATRON_HAS_INVALID_DOB label.invalid_dob_indicator { display: inline; color: purple }
 
+.PATRON_HAS_INVALID_ADDRESS label.invalid_address_indicator { display: inline; color: red }
+
 .PATRON_HAS_ALERT .patronNameLarge, 
 .PATRON_HAS_ALERT groupbox.alert { background-color: yellow; color: black; }
 .PATRON_HAS_ALERT label.alert_indicator { display: inline; color: olive }
