--- a/Open-ILS/xul/staff_client/server/skin/patron_display.css
+++ b/Open-ILS/xul/staff_client/server/skin/patron_display.css
@@ -14,14 +14,16 @@ deck#patron_deck { border-left: solid thin black; }
 */
 
 .PATRON_HAS_BILLS .patronNameLarge { background-color: #FF9900; }
-.PATRON_HAS_BILLS label.bill { color: #FF9900; }
+.PATRON_HAS_BILLS label.bill { color: #AA4400; }
 /* .PATRON_HAS_BILLS label.bill.label { text-decoration: underline; } */
 .PATRON_HAS_BILLS label.bill.value { }
+.PATRON_HAS_BILLS label.bills_indicator { display: inline; color: #AA4400; }
 
 .PATRON_HAS_OVERDUES .patronNameLarge { background-color: #FF9900; }
 .PATRON_HAS_OVERDUES label.items_overdue { color: #FF9900; }
 /* .PATRON_HAS_OVERDUES label.items_overdue.label { text-decoration: underline; } */
 .PATRON_HAS_OVERDUES label.items_overdue.value { }
+.PATRON_HAS_OVERDUES label.overdues_indicator { display: inline; color: #AA4400; }
 
 .PATRON_EXCEEDS_CHECKOUT_COUNT .patronNameLarge { background-color: purple; color: white; }
 .PATRON_EXCEEDS_CHECKOUT_COUNT label.items_out { color: purple; }
@@ -32,11 +34,13 @@ deck#patron_deck { border-left: solid thin black; }
 .PATRON_EXCEEDS_OVERDUE_COUNT label.items_overdue { color: purple; }
 /* .PATRON_EXCEEDS_OVERDUE_COUNT label.items_overdue.label { text-decoration: underline; } */
 .PATRON_EXCEEDS_OVERDUE_COUNT label.items_overdue.value { }
+.PATRON_EXCEEDS_OVERDUE_COUNT label.max_overdues_indicator { display: inline; color: purple; }
 
 .PATRON_EXCEEDS_FINES .patronNameLarge { background-color: purple; color: white; }
 .PATRON_EXCEEDS_FINES label.bill { color: purple; }
 /* .PATRON_EXCEEDS_FINES label.bill.label { text-decoration: underline; } */
 .PATRON_EXCEEDS_FINES label.bill.value { }
+.PATRON_EXCEEDS_FINES label.max_bills_indicator { display: inline; color: purple; }
 
 .PATRON_AGE_LT_18 .dob { color: purple; }
 .PATRON_AGE_LT_18 label.juvenile_indicator { display: inline; color: purple; }
@@ -55,10 +59,10 @@ deck#patron_deck { border-left: solid thin black; }
 .PATRON_INACTIVE .patronNameLarge { background-color: #333333; color: white; }
 .PATRON_INACTIVE label.inactive_indicator { display: inline; color: gray; }
 
-.PATRON_EXPIRED .patronNameLarge { background-color: #666666; }
-.PATRON_EXPIRED label.expired_indicator { display: inline; color: fuchsia; }
+.PATRON_EXPIRED .patronNameLarge { background-color: #666666;  color: white;}
+.PATRON_EXPIRED label.expired_indicator { display: inline; color: gray; }
 
-.PATRON_BARRED .patronNameLarge { background-color: red; }
+.PATRON_BARRED .patronNameLarge { background-color: red; color: white; }
 .PATRON_BARRED label.barred_indicator { display: inline; color: red; }
 
 
