--- a/Open-ILS/xul/staff_client/server/skin/global.css
+++ b/Open-ILS/xul/staff_client/server/skin/global.css
@@ -1,6 +1,10 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"); 
 @namespace html url("http://www.w3.org/TR/REC-html40"); 
 
+/*
+* { font-size-adjust: .5; }
+*/
+
 description { -moz-user-select: text; }
 
 *|textarea:focus { background-color: #DDFFDD; }
