--- a/Open-ILS/xul/staff_client/server/skin/global.css
+++ b/Open-ILS/xul/staff_client/server/skin/global.css
@@ -14,6 +14,20 @@
 .ALL_FONTS_LARGE * { font-size: large !important; }
 .ALL_FONTS_X_LARGE * { font-size: x-large !important; }
 .ALL_FONTS_XX_LARGE * { font-size: xx-large !important; }
+.ALL_FONTS_5PT * { font-size: 5pt !important; }
+.ALL_FONTS_6PT * { font-size: 6pt !important; }
+.ALL_FONTS_7PT * { font-size: 7pt !important; }
+.ALL_FONTS_8PT * { font-size: 8pt !important; }
+.ALL_FONTS_9PT * { font-size: 9pt !important; }
+.ALL_FONTS_10PT * { font-size: 10pt !important; }
+.ALL_FONTS_11PT * { font-size: 11pt !important; }
+.ALL_FONTS_12PT * { font-size: 12pt !important; }
+.ALL_FONTS_13PT * { font-size: 13pt !important; }
+.ALL_FONTS_14PT * { font-size: 14pt !important; }
+.ALL_FONTS_15PT * { font-size: 15pt !important; }
+.ALL_FONTS_16PT * { font-size: 16pt !important; }
+.ALL_FONTS_17PT * { font-size: 17pt !important; }
+.ALL_FONTS_18PT * { font-size: 18pt !important; }
 
 description { -moz-user-select: text; }
 
