--- a/Open-ILS/xul/staff_client/server/skin/global.css
+++ b/Open-ILS/xul/staff_client/server/skin/global.css
@@ -37,6 +37,8 @@ description { -moz-user-select: text; }
 .outline_me { -moz-outline: solid; }
 .clipboard_outline_me { -moz-outline: dotted thin gray; }
 
+.click_link { text-decoration: underline; color: blue; }
+
 tabpanel { border: 2px groove black; }
 caption { font-weight: bold; }
 
