--- a/Open-ILS/xul/staff_client/server/skin/patron_display.css
+++ b/Open-ILS/xul/staff_client/server/skin/patron_display.css
@@ -20,7 +20,7 @@ deck#patron_deck { border-left: solid thin black; }
 .PATRON_HAS_BILLS label.bills_indicator { display: inline; color: #AA4400; }
 
 .PATRON_HAS_OVERDUES .patronNameLarge { background-color: #FF9900; }
-.PATRON_HAS_OVERDUES label.items_overdue { color: #FF9900; }
+.PATRON_HAS_OVERDUES label.items_overdue { color: #AA4400; }
 /* .PATRON_HAS_OVERDUES label.items_overdue.label { text-decoration: underline; } */
 .PATRON_HAS_OVERDUES label.items_overdue.value { }
 .PATRON_HAS_OVERDUES label.overdues_indicator { display: inline; color: #AA4400; }
@@ -65,4 +65,7 @@ deck#patron_deck { border-left: solid thin black; }
 .PATRON_BARRED .patronNameLarge { background-color: red; color: white; }
 .PATRON_BARRED label.barred_indicator { display: inline; color: red; }
 
+.PATRON_NET_ACCESS_1 .net_access { color: #AA4400; } /* Filtered */
+.PATRON_NET_ACCESS_2 .net_access { color: green; } /* Unfiltered */
+.PATRON_NET_ACCESS_3 .net_access { color: red; } /* No Access */
 
