--- a/Open-ILS/web/reports/oils_rpt.css
+++ b/Open-ILS/web/reports/oils_rpt.css
@@ -2,6 +2,19 @@ body { font-size: 9pt; }
 .hide_me { display: none; visibility: hidden; }
 .welcome_box { position:absolute; top: 5px; right: 5px; }
 
+
+.oils_rpt_main_link {
+	padding: 5px;
+	font-size: 10pt;
+}
+
+#oils_rpt_name_div {
+	vertical-align: middle;
+	padding: 5px;
+	background: #E0F0F0; 
+	margin-bottom: 20px;
+}
+
 #oils_rpt_table {
 	width: 100%;
 	border-top: 2px solid #E0E0E0;
@@ -36,7 +49,8 @@ body { font-size: 9pt; }
 
 .oils_rpt_info_selector {
 	border: 1px solid blue; 
-	background: #E0F0E0; 
+	/*background: #E0F0E0;*/
+	background: #E0F0F0; 
 	min-height: 130px;
 	max-height: 240px;
 	overflow: scroll;
