--- a/Open-ILS/xul/staff_client/server/skin/cat.css
+++ b/Open-ILS/xul/staff_client/server/skin/cat.css
@@ -1,5 +1,5 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"); 
 @namespace html url("http://www.w3.org/TR/REC-html40"); 
 
-.has_copies { color: green; font-weight: bold; }
+.has_copies { color: black; background-color: lightgreen; font-weight: bold; }
 
