--- a/Open-ILS/web/reports/oils_rpt.css
+++ b/Open-ILS/web/reports/oils_rpt.css
@@ -1,4 +1,4 @@
-body { font-size: 9pt; font-family: Helvetica, Arial, Tahoma, sans-serif; font-size: 9pt;} 
+body { background: white; font-size: 9pt; font-family: Helvetica, Arial, Tahoma, sans-serif; font-size: 9pt;} 
 table { border-collapse: collapse; }
 
 .hide_me { display: none; visibility: hidden; }
@@ -65,7 +65,6 @@ table { border-collapse: collapse; }
 	min-height: 150px;
 	max-height: 290px;
 	overflow: scroll;
-	font-size: 8pt;
 }
 
 .oils_rpt_small_info_selector {
@@ -73,7 +72,6 @@ table { border-collapse: collapse; }
 	background: #E0F0F0; 
 	height: 80px;
 	overflow: scroll;
-	font-size: 8pt;
 	width: 12em;
 }
 
