--- a/Open-ILS/web/opac/common/css/fm_table.css
+++ b/Open-ILS/web/opac/common/css/fm_table.css
@@ -7,3 +7,4 @@
 .fm_selected thead td { padding: 1px; border: 1px solid #909090; }
 .fm_selected tbody td { padding: 1px; border: 1px solid #909090; }
 .fm_select_link { padding-left:3px; font-size:8pt; font-weight:normal; }
+.fm_table_bold { font-weight: bold; }
