added min-width to folder tree div, making sure non-agg display tforms come before agg display tforms

--- a/Open-ILS/web/reports/oils_rpt.css
+++ b/Open-ILS/web/reports/oils_rpt.css
@@ -245,6 +245,7 @@ button {
 .oils_rpt_folder_tree_div {
 	border: 1px solid #808080;
 	margin: 10px;
+	min-width: 170px;
 }
 
 .oils_rpt_folder_contents {
