--- a/Open-ILS/web/opac/theme/default/css/colors.css
+++ b/Open-ILS/web/opac/theme/default/css/colors.css
@@ -2,14 +2,76 @@ body a			{ color: black; text-decoration: none;}
 body a:visited { color: black; text-decoration: none;}
 body a:hover	{ color: red; text-decoration: underline;}
 
+
+/* the idea is to have 4 complimentary colors that 
+ * are used throughout the opac.  Edit those colors
+ * in this file
+ */
+ 
 .color_1 { background: #A7EA9D; color: #000000; }
 .color_2 { background: #64EA4F; color: #000000; }
-.color_3 { background: #CCFFFF; color: #000000; }
+.color_3 { background: #E0F6E0; color: #000000; }
 .color_4 { background: #E0F0E0; color: #000000; }
-.color_border1 { }
+
+.border_1 { border: 1px solid #A7EA9D; }
+.border_2 { border: 1px solid #64EA4F; }
+.border_3 { border: 1px solid #E0F6E0; }
+.border_4 { border: 1px solid #E0F0E0; }
+
+.border_1_2 { border: 2px solid #A7EA9D; }
+.border_2_2 { border: 2px solid #64EA4F; }
+.border_3_2 { border: 2px solid #E0F6E0; }
+.border_4_2 { border: 2px solid #E0F0E0; }
+
+.border_1_3 { border: 3px solid #A7EA9D; }
+.border_2_3 { border: 3px solid #64EA4F; }
+.border_3_3 { border: 3px solid #E0F6E0; }
+.border_4_3 { border: 3px solid #E0F0E0; }
+
+
+
+
+/* general purpose light borders */
+.border_5 { border: 1px solid #D0D0D0; }
+.border_6 { border: 1px solid #808080; }
+
+input:focus { background: #E0F0E0; color: #000000;}
+a:focus { background: #E0F0E0; color: #000000;}
+
 
 /* ---------------------------------------------------------------------- */
-.sidebar_chunk {}
+
+.canvas { /* main content div for each page */
+    border-left: 3px solid #A7EA9D;
+    border-bottom: 3px solid #A7EA9D;
+	border-top: 3px solid #A7EA9D;
+}
+
+/* border around home search box */
+.home_search { border: 3px solid #A7EA9D; }
+
+/* main nav sidebar */
+.sidebar_item_active { background: #A7EA9D; }
+
+/* record detail summary block */
+.rdetail_desc { border: 1px solid #A7EA9D; }
+.rdetail_item { border: 1px solid #A7EA9D; }
+.rdetail_extras_selected { background: #E0F0E0;} 
+
+
+.data_grid thead tr { background: #E0F0E0; color: #000000; }
+.data_grid thead td { border: 1px solid #808080; }
+.data_grid tbody td { border: 1px solid #E0F6E0; }
+.data_grid_nb thead tr { background: #E0F0E0; color: #000000; }
+.data_grid_nb thead td { border: none; }
+.data_grid_nb tbody td { border: none; }
+
+.light_border { border: 1px solid #E0F6E0; }
+
+.adv_quick_search_submit { border-bottom: 3px solid #E0F6E0;}
+
+.myopac_link_active { background: #E0F6E0; }
+
 .sidebar_extra_link { text-decoration: none; }
 #searchbar_tag_on { color: red; }
 .searchbar_item { color: black; } 
@@ -24,17 +86,9 @@ body a:hover	{ color: red; text-decoration: underline;}
 .copy_count_cell { border-right: 1px solid #E0E0E0; } 
 .copy_count_div {	border-left: 2px solid #E0F6E0; border-right: 2px solid #E0F6E0; }
 
-.rdetail_desc { border: 1px solid #A7EA9D; }
-.rdetail_item { border: 1px solid #A7EA9D; }
 #rdetail_image_cell { border: 1px solid white; border-right: 1px solid #A7EA9D;}
-.rdetail_header {  }
 
 
-.sidebar_item_active { background: #A7EA9D; }
 
-#canvas_main { border-left: 3px solid #A7EA9D; border-bottom: 3px solid #A7EA9D; 
-	border-top: 3px solid #A7EA9D;  }
 
-.non_canvas {  border-left: 3px solid #A7EA9D; border-top: 3px solid #A7EA9D; 
-	border-bottom: 3px solid #A7EA9D; }
 
