--- a/Open-ILS/xul/staff_client/chrome/skin/global.css
+++ b/Open-ILS/xul/staff_client/chrome/skin/global.css
@@ -15,6 +15,7 @@ iframe { background: #CDCED3 url("chrome://browser/skin/icons/box-background.png
 .operator_change { background-color: red; }
 
 .shrinkable_groupbox { font-weight: bold; -moz-binding: url('chrome://open_ils_staff_client/content/main/bindings.xml#caption'); }
+messagecatalog { -moz-binding: url('chrome://open_ils_staff_client/content/main/bindings.xml#messagecatalog'); }
 
 .my_overflow { overflow: auto; }
 
