added ability to link back to a vendor product page from the record details page.  this is useful for supplying cover art attribution.  only currently supported options are null (no vendor links, default) and "amazon"

--- a/Open-ILS/web/opac/skin/default/css/layout.css
+++ b/Open-ILS/web/opac/skin/default/css/layout.css
@@ -206,3 +206,8 @@ table { border-collapse: collapse; }
 
 .invalid_hold { background: #F0F0D0; }
 .myopac_summary_table td { padding : 3px; }
+
+.jacket_attrib { font-size: 7pt; }
+
+
+
