--- a/Open-ILS/src/reporter/report_success.tmpl
+++ b/Open-ILS/src/reporter/report_success.tmpl
@@ -1,6 +1,6 @@
 To: {TO}
 From: {FROM}
-Reply-To: {REPLY-TO}
+Reply-To: {REPLY_TO}
 Subject: Report finished: "{REPORT_NAME}" 
 
 At {RUN_TIME} the report "{REPORT_NAME}" finished running with a complete
