another adjustment to the new failure template

--- a/Open-ILS/src/reporter/report_failure.tmpl
+++ b/Open-ILS/src/reporter/report_failure.tmpl
@@ -1,7 +1,7 @@
 To: {TO}
 From: {FROM}
 Reply-To: {REPLY_TO}
-Subject: Report finished: "{REPORT_NAME}" 
+Subject: Report failed: "{REPORT_NAME}" 
 
 Your report, named [{REPORT_NAME}], was scheduled to run at {RUN_TIME} has failed with the following error message:
 
