Slight grammatical fix

--- a/Open-ILS/src/reporter/report_failure.tmpl
+++ b/Open-ILS/src/reporter/report_failure.tmpl
@@ -3,7 +3,8 @@ From: {FROM}
 Reply-To: {REPLY_TO}
 Subject: Report failed: "{REPORT_NAME}" 
 
-Your report, named [{REPORT_NAME}], was scheduled to run at {RUN_TIME} has failed with the following error message:
+Your report, named [{REPORT_NAME}], scheduled to run at {RUN_TIME},
+has failed with the following error message:
 
  {ERROR_TEXT}
 
@@ -11,6 +12,7 @@ The SQL command attempted was:
 
  {SQL}
 
-If you are unsure of the meaning of this message, please contact your ILS adminstrator or support staff
-and give them both the error message and the SQL command.
+If you are unsure of the meaning of this message, please contact your
+ILS adminstrator or support staff and give them both the error message
+and the SQL command.
 
