--- a/Open-ILS/web/opac/skin/default/css/layout.css
+++ b/Open-ILS/web/opac/skin/default/css/layout.css
@@ -82,6 +82,7 @@ table { border-collapse: collapse; }
 #searchbar_table { border-collapse: collapse; }
 
 .search_box_container { width: 240px; padding: 3px; }/* border: 1px solid #A0A0A0;' class='color_2'>*/
+#search_box { width: 260px; }
 
 
 /* ---------------------------------------------------------------------- */
