--- a/Open-ILS/xul/staff_client/server/skin/global.css
+++ b/Open-ILS/xul/staff_client/server/skin/global.css
@@ -89,3 +89,10 @@ listitem { border-bottom: solid thin black; }
 
 .copy_editor_field_changed { background: lightgreen; }
 
+/*
+ * oops, disable these until the native evergreen catalog z-source is in trunk/ 
+ */
+
+checkbox[id="native-evergreen-catalog_service"] { display: none; }
+textbox[id="native-evergreen-catalog_username"] { display: none; }
+textbox[id="native-evergreen-catalog_password"] { display: none; }
