--- a/Open-ILS/web/opac/theme/default/css/colors.css
+++ b/Open-ILS/web/opac/theme/default/css/colors.css
@@ -93,3 +93,4 @@ a:focus { background: #E0F0E0; color: #000000;}
 .x_mark { color: red; }
 .check_mark { color: green; }
 
+#myopac_holds_thaw_date_form { border: 1px solid #E0E0E0; } 
