make the authority pop-ups more readable

--- a/Open-ILS/xul/staff_client/server/cat/marcedit.css
+++ b/Open-ILS/xul/staff_client/server/cat/marcedit.css
@@ -94,3 +94,4 @@ grid#leaderGrid[type="COM"] *[set~="COM"], grid#leaderGrid[type="COM"] *[set~="C
 	visibility: visible;
 }
 
+grid[name="-none-"] * label { color: black; }
